Demo-1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: test
    kubernetes.io/metadata.name: default
  name: policy-test
